overflow on body fixed

--- a/css/styles.less
+++ b/css/styles.less
@@ -245,8 +245,9 @@ html {
     body{
         margin: 0 auto;
         width: 960px;
-        height: 100%;
+        min-height: 100%;
         box-shadow: 0 0 10px 5px @shadow;
+        padding-bottom: 10px;
         header{
             background-color: #ff8000;
             img {
@@ -312,6 +313,7 @@ html {
             max-width: 100%;
             display:flex;
             flex-wrap: wrap;
+            min-height:0;
             div.box{
                 margin-top: 10px;
                 order: 1;
